--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Single-Page-CV"/>
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+        .green-text {
+            color: green;
+            
+        }
+        .blue-text {
+            color: blue;
+        }
+    </style>
+    <h1 class="zagolovok">Your Name</h1>
+    <p class="green-text">Junior Frontend Developer</p>
+    <address>
+        123 Your Street<br>
+        Your City, ST 12345<br>
+        (123) 456-7890<br>
+        no_reply@example.com
+    </address>
+    <h4 class="green-text">Skills</h4>
+    <p>
+        HTML,CSS,JavaScript,Accessibility,Figma to Design,Responsive Web Design,
+        Technical Writing,Presentation
+    </p>
+    <p class="green-text">Education</p>
+    <h3 class="blue-text">
+        School Name,Locatiom - Degree
+    </h3>
+    <data>
+        Month 20xx to Month 20xx
+    </data>
+    <p>List of exciting things you did at university</p>
+    <br>
+    <p class="green-text">Experience</p>
+    <h3 class="blue-text">Company Name,Location - Jov Title</h3>
+    <data>
+        Month 20xx to Month 20xx
+    </data><br>
+    <ul>
+    <li>List of achievements</li>
+    <li>List of achievements</li>
+    <li>List of achievements</li>
+</ul>
+<p>Skills:List of skills used or gained at this company</p><br>
+<h3 class="blue-text">Company Name,Location - Jov Title</h3>
+<data>
+    Month 20xx to Month 20xx
+</data><br>
+<ul>
+    <li>List of achievements</li>
+    <li>List of achievements</li>
+    <li>List of achievements</li>
+</ul>
+<p>Skills:List of skills used or gained at this company</p><br>
+<p class="green-text">Across the Internet</p>
+<p>Add you Linkedln, GitHub profile links</p>
 </body>
 </html>
